--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               "src/scss/style.scss",
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/nova-light/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css"
+
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["./node_modules"]
@@ -92,7 +94,8 @@
               "src/scss/style.scss",
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/nova-light/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["./node_modules"]
