--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.0.0",
     "ngx-perfect-scrollbar": "^8.0.0",
+    "primeflex": "^1.0.0-rc.1",
     "primeicons": "^1.0.0",
     "primeng": "^8.0.0",
     "quill": "^1.3.6",
