--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,7 @@
             },
             "scripts": [
               "node_modules/chart.js/dist/Chart.min.js",
+              "node_modules/jquery/dist/jquery.min.js",
               "node_modules/jquery/dist/jquery.min.js"
             ]
           },
@@ -85,6 +86,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "scripts": [
               "node_modules/chart.js/dist/Chart.min.js",
+              "node_modules/jquery/dist/jquery.min.js",
               "node_modules/jquery/dist/jquery.min.js"
             ],
             "styles": [
