--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@fortawesome/angular-fontawesome": "^0.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "@types/moment": "^2.13.0",
     "ag-grid-angular": "^21.0.1",
     "ag-grid-community": "^21.0.1",
