--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "chart.js": "^2.8.0",
     "core-js": "^2.6.9",
     "flag-icon-css": "^3.3.0",
+    "flatpickr": "^4.6.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
